--- a/index.html
+++ b/index.html
@@ -113,17 +113,20 @@
 
 
   <div id="mathInfo" class="screen hidden">
-    <h1>📘 ความรู้คณิตศาสตร์ ม.ต้น</h1>
-    <div class="game-container">
-      <ul>
-        <li>🔢 การบวก ลบ คูณ หาร</li>
-        <li>📈 เลขยกกำลัง</li>
-        <li>🍰 เศษส่วน</li>
-        <li>🔁 การแปลงทศนิยม/เศษส่วน</li>
-      </ul>
-      <button onclick="proceedToMode()">เข้าใจแล้ว ➤</button>
-    </div>
+  <h1>📘 ความรู้คณิตศาสตร์ ม.ต้น</h1>
+  <div class="game-container">
+    <ul style="text-align: left; font-size: 1.2rem; line-height: 1.7;">
+      <li>🔢 <strong>การบวก ลบ คูณ หาร:</strong> คือการคำนวณพื้นฐาน เช่น 7 + 3 = 10 หรือ 12 ÷ 4 = 3 ใช้แก้โจทย์ปัญหาได้ในชีวิตจริง</li>
+      <li>📈 <strong>เลขยกกำลัง:</strong> เป็นการคูณเลขซ้ำ ๆ เช่น 2³ = 2 × 2 × 2 = 8 และใช้สัญลักษณ์เลขชี้กำลัง (เช่น ⁴, ⁵)</li>
+      <li>🍰 <strong>เศษส่วนและทศนิยม:</strong> เศษส่วนแสดงส่วนของจำนวน เช่น ½, ¾ ทศนิยมใช้จุด เช่น 0.25 = ¼ และสามารถแปลงกลับไปมาได้</li>
+      <li>🔁 <strong>การแปลงรูปแบบตัวเลข:</strong> เช่น 0.75 = ¾ หรือ 20% = 0.2 = ⅕ การแปลงทำให้เปรียบเทียบง่ายขึ้น</li>
+      <li>📐 <strong>พื้นฐานเรขาคณิต:</strong> - รูปสามเหลี่ยม มี 3 ด้าน - สี่เหลี่ยม มี 4 ด้าน - วงกลม ไม่มีมุม - ห้าเหลี่ยม มี 5 ด้าน</li>
+      <li>📏 <strong>การวัด:</strong> - ความยาว: หน่วยเป็น ซม., ม. - พื้นที่: ตร.ซม. เช่น สี่เหลี่ยม พื้นที่ = กว้าง × ยาว - ปริมาตร: ลบ.ซม.³ หรือ ลบ.ม.</li>
+      <li>🧠 <strong>การแก้โจทย์ปัญหา:</strong> นำความรู้ไปใช้วิเคราะห์สถานการณ์ เช่น “แม่มีเงิน 100 บาท ซื้อของ 3 ชิ้นๆ ละ 25 บาท เหลือเท่าไหร่?” = 25 บาท</li>
+    </ul>
+    <button onclick="proceedToMode()">เข้าใจแล้ว ➤</button>
   </div>
+</div>
 
   <div id="mode" class="screen hidden">
     <h1>เลือกระดับความยาก</h1>
